<?xml version="1.0"?>
<package format="2">

  <name>ros-data-capture-examples</name>
  <version>0.0.0</version>
  <description>A set of examples for using the ros-data-capture repository</description>
  <maintainer email="emilyzho@usc.edu">Emily Zhou</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cordial_msgs</build_depend>

  <exec_depend>cordial_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


</package>